# Ares-Converter

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: app.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: ConversionPanel.tsx  FilePreview.tsx  Footer.tsx  FormatSelector.tsx  FormatShowcase.tsx  Header.tsx  HistoryPanel.tsx  ProgressPanel.tsx  UploadZone.tsx
apps/web/src/hooks/: useConversion.ts  useKeyboardShortcuts.ts  useTheme.ts
docs/: architecture.md
