[package]
name = "ares-converter"
version = "1.0.0"
description = "Privacy-first universal file converter"
authors = ["Ares Converter Contributors"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "fs-exists", "path-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
